--- a/projet/translations/messages.fr_BE.yml
+++ b/projet/translations/messages.fr_BE.yml
@@ -6,3 +6,8 @@ Chantier: Chantier
 Personnes: Personnes
 Matériaux: Matériaux
 'Accès rapides': 'Accès rapides'
+Déconnexion: Déconnexion
+Connexion: Connexion
+'À Propos': 'À Propos'
+finished: Clôturé
+ongoing: 'En cours'
